# Qwen3-tts

./: .gitignore  README.md  pyproject.toml
examples/: audition_checkpoints_12hz_customvoice.py  test_model_12-1.7-sft-3-23.py  test_model_12-1.7Customvoice.py  test_model_12-1.7base.py  test_model_12hz_base-3-23.py  test_model_12hz_custom_voice.py
finetuning/: README.md  dataset.py  diagnose_fixed_eval_audio.py  plot_qwen3tts_metrics.py  prepare_data.py  prepare_seed_tts_eval.py  sft_12hz.py  sft_12hz_with_metrics.py
finetuning/scr_sft/: __init__.py  args.py  audio_qc.py  benchmark_eval.py  cli.py  config.py  constants.py  data.py  diagnostics.py  eval_audio.py  export.py  io_utils.py  losses.py  model_ops.py  plots.py  recipes.py  seed_tts_eval.py  state.py  tracking.py  trainer.py
finetuning/script/: 1.md  config.md  raw2jsonl.py
qwen_tts/: eval_utils.py
qwen_tts/core/tokenizer_12hz/: modeling_qwen3_tts_tokenizer_v2.py
qwen_tts/core/tokenizer_25hz/: modeling_qwen3_tts_tokenizer_v1.py
qwen_tts/inference/: qwen3_tts_tokenizer.py
seed-tts-eval/: README.md  asr_utils.py  average_wer.py  cal_sim.sh  cal_wer.sh  get_wav_res_ref_text.py  prepare_ckpt.py  requirements.txt  run_wer.py
tmp/seed_tts_eval_smoke/: test_raw_3.jsonl
