[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-tts"
version = "0.1.1"
description = "Qwen-TTS python package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
license = { text = "Apache-2.0" }
authors = [{ name = "Alibaba Qwen Team" }]

dependencies = [
  "torch==2.10.0",
  "transformers==4.57.3",
  "accelerate==1.12.0",
  "gradio",
  "librosa",
  "torchaudio==2.10.0",
  "soundfile",
  "sox",
  "onnxruntime",
  "einops",
  "nvitop>=1.6.2",
  "huggingface-hub==0.36.2",
  "matplotlib>=3.10.8",
  "wandb>=0.25.1",
  "psutil>=7.2.2",
  "pynvml>=13.0.1",
  "nvidia-ml-py>=13.590.48",
]

[project.urls]
Homepage = "https://github.com/Qwen/Qwen3-TTS"
Repository = "https://github.com/Qwen/Qwen3-TTS"

[project.scripts]
qwen-tts-demo = "qwen_tts.cli.demo:main"

[dependency-groups]
train = [
  "tensorboard>=2.20.0",
  "packaging>=24.2",
  "ninja>=1.11.1",
  "flash-attn==2.8.3; platform_system == 'Linux' and platform_machine == 'x86_64'",
]

[tool.uv]
default-groups = ["train"]
extra-build-dependencies = { flash-attn = [{ requirement = "torch", match-runtime = true }, "packaging", "ninja"] }

[tool.setuptools]
packages = { find = { where = ["."] , include = ["qwen_tts*"] } }
include-package-data = true

[tool.setuptools.package-data]
qwen_tts = ["py.typed", "**/*.npz"]
